--- a/stock.html
+++ b/stock.html
@@ -33,16 +33,34 @@
 			<div class="play-container">
 				<div class="text-block-14"><strong>Wanna Play?</strong></div>
 				<button id="playButton">
-					<img src="./img/play-button-arrowhead.png" alt="Play Button" width="30" height="30">
+					<img src="./img/play-button-arrowhead.png" alt="Play Button" class="play-icon" width="30"
+						height="30">
+					<img src="./img/close-button-arrowhead.png" alt="Close Button" class="x-icon hidden" width="30"
+						height="30">
 				</button>
 			</div>
 			<div class="additional-box">
 				<p></p>
 			</div>
+			<div class="question-box hidden">
+				<div class="question">
+					<p></p>
+				</div>
+				<div class="response">
+					<p></p>
+				</div>
+				<div class="botResponse">
+					<p></p>
+				</div>
+				<div class="chat-input">
+					<textarea id="messageInput" placeholder="Enter a message..." spellcheck="false" required></textarea>
+					<span id="send-btn" class="material-symbols-rounded">send</span>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<h2>Related Articles</h2>
+	<h2 id="related-articles-header" style="display: none" ;>Related Articles</h2>
 	<div class="w-layout-grid grid-gallery" id="article-gallery">
 		<!-- <a href="https://example.com/article1" class="article-item">
 			<img src="./img/article1-thumbnail.png" alt="Article 1">
@@ -58,7 +76,7 @@
 		</a> -->
 	</div>
 
-	<ul role="list" class="list-2">
+	<!-- <ul role="list" class="list-2">
 		<li class="list-item-2">3 Stocks to Take Advantage of the Next Wave of Artificial Intelligence (AI)
 			Investing
 		</li>
@@ -66,12 +84,13 @@
 		<li class="list-item-2">These Dividend Stocks Just Gave Their Investors a Raise. Here&#x27;s Why That&#x27;s
 			a
 			Big Deal.</li>
-	</ul>
+	</ul> -->
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/webflow-script.js" type="text/javascript" async></script>
 	<script
 		type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
 	<script type="text/javascript" src="js/data.js"></script>
+	<script type="text/javascript" src="js/data_new.js"></script>
 	<script type="text/javascript" src="./js/script.js"></script>
 
 </body>
