--- a/stock.html
+++ b/stock.html
@@ -17,7 +17,7 @@
 
 <body class="body-2">
 	<div id="back">&#x279C;</div>
-	<h1>Financial Stocks</h1>
+	<h1>NewScribe</h1>
 	<div class="w-layout-grid grid-7">
 		<div id="w-node-_6070e972-b8bf-c979-8d32-0c77d4213b56-03583a0d" class="text-block-12"></div>
 		<div id="w-node-_64ee8a3d-07cc-f182-678d-0b48bb2ad89b-03583a0d" class="text-block-12"></div>
